fixed off screen menu display, product and team images sizing

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -283,7 +283,7 @@ header {
         
          h3 {
             color: #fff;
-            margin-bottom: 1rem;
+            margin: 2rem 0 2rem;
         }
     
         .fa {
@@ -321,7 +321,7 @@ header {
         border-radius: 5rem;
         max-width: 50vw;
         height: 100%;
-        max-height: 100vh;
+        max-height: 70vh;
     }
     
     .product-text {
@@ -355,9 +355,8 @@ header {
     }
     
     img {
-        width: 40vw;
+        width: 25vw;
         height: 50vh;
-        padding: 1rem 5rem;
         border-radius: 50%;
     }
 }
@@ -478,9 +477,7 @@ footer {
     }
     
     .team-boxes .card img {
-        width: 85vw;
-        max-height: 15rem;
-        height: 100%;
+        width: 75vw;
     }
     
     .card {
@@ -620,12 +617,13 @@ footer {
     
     .main-menu:target,
     .main-menu[aria-expanded="true"] {
-      right: 0;
-      background: $mobile-bg;
-      outline: none;
-      -moz-box-shadow: 0.1875rem 0 0.75rem rgba(29, 30, 43,.85);
-      -webkit-box-shadow: 0.1875rem 0 0.75rem rgba(29, 30, 43,.85);
-      box-shadow: 0.1875rem 0 0.75rem rgba(29, 30, 43,.85);
+        display: flex;
+        right: 0;
+        background: $mobile-bg;
+        outline: none;
+        -moz-box-shadow: 0.1875rem 0 0.75rem rgba(29, 30, 43,.85);
+        -webkit-box-shadow: 0.1875rem 0 0.75rem rgba(29, 30, 43,.85);
+        box-shadow: 0.1875rem 0 0.75rem rgba(29, 30, 43,.85);
     }
 
     .main-menu:target .menu-close,
@@ -636,11 +634,11 @@ footer {
 
     .main-menu:target ul,
     .main-menu[aria-expanded="true"] ul {
-      position: relative;
-      z-index: 1000;
-      background: #000;
+        position: relative;
+        z-index: 1000;
+        background: #000;
       
-      li:hover {
+        li:hover {
             border: 0.0625rem solid $primary-color;
             border-left: none;
             border-right: none;
@@ -660,6 +658,7 @@ footer {
         // Undo positioning of off-canvas menu
       
         .main-menu {
+            display: flex;
             position: relative;
             right: auto;
             top: auto;
@@ -696,6 +695,7 @@ footer {
     @media (max-width: 45rem) {
             
         .main-menu {
+            display: none;
             right: -15rem;
         }    
     
